<resources>
    //Strings Tela de Login

    <string name="app_name">ControlDroid</string>
    <string name="login">Login</string>
    <string name="usuario">Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="entrar">Entrar</string>
    <string name="novo_usuario">Criar novo usuário?</string>
    <string name="login_sucesso">Login (Usuário) efetuado com Sucesso!</string>
    <string name="login_erro">Usuário/senha Invalido(s)!</string>
    <string name="admin_login_sucesso">Login (Administrador) efetuado com Sucesso!</string>

    //Strings Tela de Cadastro

    <string name="cadastro_usuario">Cadastrar Usuário</string>
    <string name="nome_cadastro">Nome Completo:</string>
    <string name="email_cadastro">E-mail:</string>
    <string name="tel_cadastro">Telefone:</string>
    <string name="data_cadastro">Data de Nascimento: </string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastro_sucesso">Usuário cadastrado com sucesso!</string>
    <string name="cadastro_invalido">Campo(s) inválido(s), tente novamente!</string>
    <string name="cadastro_alterado">Cadastro Alterado com Sucesso!</string>


    //Strings Dashboard Admin

    <string name="dashboard_admin">Menu Principal</string>
    <string name="cadastrar_produto">Cadastrar Produto</string>
    <string name="atualizar_produto">Gerenciar Usuários</string>
    <string name="fechamento_dia">Fechar Caixa</string>
    <string name="logout">Sair</string>

    //Strings Dashboard User

    <string name="dashboard_user">Menu Principal</string>
    <string name="comprar_produto">Comprar Produto</string>
    <string name="rever_pedido">Ver Pedido</string>
    <string name="atualizar_cadastro">Atualizar Cadastro</string>

    //Strings Cadastrar Produto

    <string name="alterar_produto">Produto Alterado com Sucesso!</string>
    <string name="lista_produto">Produtos</string>
    <string name="adicionar_produto">Adicionar Novo Produto</string>
    <string name="nome_produto">Nome Produto:</string>
    <string name="categoria_produto">Selecione a Categoria</string>
    <string name="categoria">Categoria</string>
    <string-array name="produto_categoria_lista">
        <item>Alimentício</item>
        <item>Eletrônico</item>
        <item>Lazer</item>
        <item>Outros</item>
    </string-array>
    <string name="qntd_estoque">Quantidade em Estoque:</string>
    <string name="valor_produto">Preço:</string>
    <string name="preco_produto">Valor de Compra(Unidade):</string>
    <string name="produto_sucesso">Produto cadastrado com sucesso!</string>

    //Listar Produto
    <string name="produto_excluir">Produto excluído com Sucesso</string>
    <string name="produto_msg_excluir">Deseja excluir o Produto ?</string>

    //Listar Usuario
    <string name="user_list">Usuários</string>
    <string name="admin_list">Administradores</string>
    <string name="excluir_user">Deseja excluir o Usuário?</string>
    <string name="user_excluido">Usuário excluído com Sucesso!</string>

    //Listar Administrador
    <string name="admin_excluir">Deseja excluir o Administrador?</string>
    <string name="admin_excluido">Administrador excluído com Sucesso!</string>

    //Comprar Produtos
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="msg_dialog_unidades">Quantas unidades deseja comprar?</string>
    <string name="pedido_realizado">Pedido realizado com Sucesso!</string>
    //Ver Pedidos
    <string name="pedidos">Pedidos</string>

    //Fechar Caixa
    <string name="fechar_dia">Deseja realmente fechar o dia e gerar o lucro ?</string>
    <string name="alert_dialog_fechar_caixa">Fechamento do Caixa</string>

</resources>
