<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SteelBlue">

    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/dashboard_admin"
        android:textColor="@color/White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:background="@color/Gainsboro"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/comprar_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comprar_produto"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceSmall"
            android:clickable="true"
            android:onClick="comprarProduto"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="120dp"
            android:drawableTop="@drawable/buy_product"/>
        <TextView
            android:id="@+id/ver_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rever_pedido"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/comprar_produto"
            android:layout_marginRight="70dp"
            android:drawableTop="@drawable/see_order"
            android:clickable="true"
            android:onClick="verPedido"/>
        <TextView
            android:id="@+id/atualizar_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atualizar_cadastro"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@id/comprar_produto"
            android:layout_marginBottom="120dp"
            android:drawableTop="@drawable/update_user"

            android:layout_alignRight="@+id/comprar_produto"
            android:layout_alignEnd="@+id/comprar_produto"
            android:clickable="true"
            android:onClick="atualizarCadastro"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_alignBottom="@id/atualizar_cadastro"
            android:layout_alignRight="@id/ver_pedido"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:gravity="center"
            android:drawableTop="@drawable/logout"
            android:clickable="true"
            android:onClick="logout"/>
    </RelativeLayout>

</LinearLayout>