<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SteelBlue">

    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/dashboard_admin"
        android:textColor="@color/White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:background="@color/Gainsboro"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cadastrar_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar_produto"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceSmall"
            android:clickable="true"
            android:onClick="cadastrarProduto"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="120dp"
            android:drawableTop="@drawable/new_product"/>
        <TextView
            android:id="@+id/gerenciar_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atualizar_produto"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/cadastrar_produto"
            android:layout_marginRight="50dp"
            android:drawableTop="@drawable/user_manager"
            android:clickable="true"
            android:onClick="gerenciarUsuarios"/>
        <TextView
            android:id="@+id/fechar_caixa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechamento_dia"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@id/cadastrar_produto"
            android:layout_marginBottom="120dp"
            android:drawableTop="@drawable/day_resolution"
            android:layout_alignRight="@+id/cadastrar_produto"
            android:layout_alignEnd="@+id/cadastrar_produto"
            android:clickable="true"
            android:onClick="fecharCaixa"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_alignBottom="@id/fechar_caixa"
            android:layout_alignRight="@id/gerenciar_usuario"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:gravity="center"
            android:drawableTop="@drawable/logout"
            android:paddingRight="25dp"
            android:clickable="true"
            android:onClick="logout"/>
    </RelativeLayout>

</LinearLayout>